--- a/public/index.html
+++ b/public/index.html
@@ -1,17 +1,37 @@
 <!DOCTYPE html>
 <html lang="">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title><%= htmlWebpackPlugin.options.title %></title>
-  </head>
-  <body>
-    <noscript>
-      <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
-    </noscript>
-    <div id="app"></div>
-    <!-- built files will be auto injected -->
-  </body>
+
+<!--
+   _____                        _ 
+  |  __ \                      (_)
+  | |__) |___   __ _  ___ _ __  _ 
+  |  _  // _ \ / _` |/ _ \ '_ \| |
+  | | \ \ (_) | (_| |  __/ |_) | |
+  |_|  \_\___/ \__, |\___| .__/|_|
+                __/ |    | |      
+               |___/     |_|      
+  @name: index.html
+  @description: Element UI Demo
+  @author: rogepi
+  @time: 2021-01-30
+-->
+
+<head>
+  <meta charset="utf-8">
+  <meta author="rogepi">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width,initial-scale=1.0">
+  <link rel="icon" href="<%= BASE_URL %>rowlet.png">
+  <title>Element-Demo</title>
+</head>
+
+<body>
+  <noscript>
+    <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled.
+        Please enable it to continue.</strong>
+  </noscript>
+  <div id="app"></div>
+  <!-- built files will be auto injected -->
+</body>
+
 </html>
